AL Falah Group Human Resources Front End

--- a/founder.html
+++ b/founder.html
@@ -228,7 +228,7 @@
                     Greetings to all from AL-Falah Group family.
                   </h3>
                 </div>
-                <p>
+                 <p style="color: #000;">
                   Firstly would like to take this opportunity to thank all of our valued clients. Your support and trust has elevated us to stand in a good position in manpower business industry in Nepal for more than two decades.
 <br>
                   AL-Falah Group Human Resources Pvt. Ltd. has gone through a lot of adversities. But with hardwork and honesty we have succeeded and overcome all those adversities. Today AL-Falah Group Human Resources Pvt. Ltd. is regarded as one of the most trust worthy and reliable foreign agencies in Nepal.
@@ -267,7 +267,7 @@
                       Greetings to all from AL-Falah Group family.
                     </h3>
                   </div>
-                  <p>
+                   <p style="color: #000;">
                     Firstly would like to take this opportunity to thank all of our valued clients. Your support and trust has elevated us to stand in a good position in manpower business industry in Nepal for more than two decades.
   <br>
                     AL-Falah Group Human Resources Pvt. Ltd. has gone through a lot of adversities. But with hardwork and honesty we have succeeded and overcome all those adversities. Today AL-Falah Group Human Resources Pvt. Ltd. is regarded as one of the most trust worthy and reliable foreign agencies in Nepal.
@@ -300,7 +300,7 @@
             <div class="img" style="background-image: url(images/official/manpower-1.jpg)">
               <div class="overlay"></div>
               <h2>Providing Personalized and High Quality Services</h2>
-              <p>
+               <p style="color: #000;">
                 We can manage your dream building A small river named AL-Falah Group
                  by their place
               </p>
@@ -322,7 +322,7 @@
 			  <div class="ftco-footer-widget">
 				<h2 class="ftco-heading-2 d-flex align-items-center">Connect with us
 			  </h2>
-				<p>
+				 <p style="color: #000;">
 				  You can connect with us in different social medias.
 				</p>
 				<ul class="ftco-footer-social list-unstyled mt-4">
