--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                 Vokalia and Consonantia, there live the blind texts. Separated
                 they live in Bookmarksgrove.
               </p>
-              <p>
+               <p style="color: #000;">
                 <a href="#" class="btn btn-primary"> Recruitment Process </a>
                 <a
                   href="#"
@@ -244,7 +244,7 @@
               </div>
               <div class="media-body pl-4">
                 <h3 class="heading mb-3">Mission</h3>
-                <p>
+                 <p>
                   To offer integrated best quality services enabling us to
                   become the feet choice in Human Resource management and to be
                   a reliable partner in our sphere of work through valued and
@@ -262,7 +262,7 @@
               </div>
               <div class="media-body pl-4">
                 <h3 class="heading mb-3">Vision</h3>
-                <p>
+                 <p>
                   To grow beyond the horizon of goals and deliver quality
                   services continuously in order to become a hallmark of a
                   dynamic organization responding to the clients needs.
@@ -279,7 +279,7 @@
               </div>
               <div class="media-body pl-4">
                 <h3 class="heading mb-3">Goals</h3>
-                <p>
+                 <p>
                   Our goal is to ensure that the fit between client and
                   candidate meets the requirement of both stakeholders
                   respectively and value the input of individuals whether they
@@ -314,7 +314,7 @@
                     human resoure services
                   </h3>
                 </div>
-                <p>
+                <p style="color: #000;">
                   AL-Falah Group Human Resources Pvt. Ltd., (established in
                   2079) started its recruitment operation with an office
                   comprising of only few staff. Since then, we have been able to
@@ -358,7 +358,7 @@
             <div class="img" style="background-image: url(images/official/manpower-1.jpg)">
               <div class="overlay"></div>
               <h2>Providing Personalized and High Quality Services</h2>
-              <p>
+               <p style="color: #000;">
                 We can manage your dream building A small river named AL-Falah Group
                  by their place
               </p>
@@ -391,7 +391,7 @@
               <div class="text">
                 <div class="icon"><span class="flaticon-architect"></span></div>
                 <h2>Responsible Placement</h2>
-                <p>
+                 <p style="color: #000;">
 					The selection procedure ends with the placement of a worker to the job. Placement is the process of assigning a...
                 </p>
                 <a href="#" class="btn-custom">Read more</a>
@@ -407,7 +407,7 @@
               <div class="text">
                 <div class="icon"><span class="flaticon-worker"></span></div>
                 <h2>Overseas Recruitment</h2>
-                <p>
+                 <p style="color: #000;">
 					Hiring foreign workers can be a difficult and challenging process. In Raj Overseas Pvt. Ltd., we will assist you with…
                 </p>
                 <a href="#" class="btn-custom">Read more</a>
@@ -423,7 +423,7 @@
               <div class="text">
                 <div class="icon"><span class="flaticon-hammer"></span></div>
                 <h2>Pre Departure Training</h2>
-                <p>
+                 <p style="color: #000;">
 					For the better placement, Raj Overseas Pvt. Ltd. is managing every task efficiently and effectively as per the requirement of…
                 </p>
                 <a href="#" class="btn-custom">Read more</a>
@@ -447,22 +447,21 @@
             >
               <span class="subheading">Greetings to all from AL-Falah Group family.</span>
               <h2 class="mb-4">Message From Director</h2>
-              <p>
+               <p>
                 Firstly would like to take this opportunity to thank all of our valued clients. Your support and trust has elevated us to stand in a good position in manpower business industry in Nepal for more than two decades.
 
 				AL-Falah Group Human Resources Pvt. Ltd. has gone through a lot of adversities. But with hardwork and honesty we have succeeded and overcome all those adversities. Today AL-Falah Group Human Resources Pvt. Ltd. is regarded as one of the most trust worthy and reliable foreign agencies in Nepal.
 			  </p><br>
-              <p>
+               <p>
                 I hope this profile will help you obtain more infromation regarding our agency and provided insights on the potentials of the services we offer.
 				We look forward to work with you in the near future.
 				<br>
 				<br>
 				<h4>
-        
 					Founder: Chairman - Managing Director <br>
 				</h4>
               </p>
-              <p>
+               <p>
                 <a href="founder.html" class="btn btn-primary"> View All Message From Directors </a>
               </p>
             </div>
@@ -771,7 +770,7 @@
               </a>
               <div class="text d-block">
                 <div class="meta">
-                  <p>
+                   <p style="color: #000;">
                     <a href="#"
                       ><span class="fa fa-calendar mr-2"></span>Sept. 06,
                       2020</a
@@ -787,7 +786,7 @@
                     >Job Vacancy: Urgent! Supermarket Jobs in Abroad</a
                   >
                 </h3>
-                <p>
+                 <p style="color: #000;">
                   <a href="#" class="btn btn-secondary py-2 px-3"
                     >Apply Now</a
                   >
@@ -806,7 +805,7 @@
               </a>
               <div class="text d-block">
                 <div class="meta">
-                  <p>
+                   <p style="color: #000;">
                     <a href="#"
                       ><span class="fa fa-calendar mr-2"></span>Sept. 06,
                       2020</a
@@ -822,7 +821,7 @@
                     >International Supermarket Jobs, Employment</a
                   >
                 </h3>
-                <p>
+                 <p style="color: #000;">
                   <a href="#" class="btn btn-secondary py-2 px-3"
                     >Apply Now</a
                   >
@@ -840,7 +839,7 @@
               </a>
               <div class="text d-block">
                 <div class="meta">
-                  <p>
+                   <p style="color: #000;">
                     <a href="#"
                       ><span class="fa fa-calendar mr-2"></span>Sept. 06,
                       2020</a
@@ -856,7 +855,7 @@
                     >Job: Urgently Required for 420 Retail Job Vacancies In Overseas</a
                   >
                 </h3>
-                <p>
+                 <p style="color: #000;">
                   <a href="#" class="btn btn-secondary py-2 px-3"
                     >Apply Now</a
                   >
@@ -885,7 +884,7 @@
 			  <div class="ftco-footer-widget">
 				<h2 class="ftco-heading-2 d-flex align-items-center">Connect with us
 			  </h2>
-				<p>
+				 <p>
 				  You can connect with us in different social medias.
 				</p>
 				<ul class="ftco-footer-social list-unstyled mt-4">
