--- a/introduction.html
+++ b/introduction.html
@@ -229,7 +229,7 @@
 					  human resoure services
 					</h3>
 				  </div>
-				  <p>
+				   <p style="color: #000;">
 					AL-Falah Group Human Resources Pvt. Ltd., (established in
 					2079) started its recruitment operation with an office
 					comprising of only few staff. Since then, we have been able to
@@ -273,7 +273,7 @@
 					<div class="img">
 						<div class="overlay"></div>
 						<h2>Providing Personalized and High Quality Services</h2>
-						<p>
+						 <p style="color: #000;">
 							AL-Falah Group Human Resources Pvt. Ltd. was established in 1997 A.D. and started its recruitment operation with an office comprising of only few staff. Since then, we have been able to set up a bench mark in our business scope with our best services provided by dedicated and dynamic staff  members. Having been awarded with letter of appreciation from Ministry of Labor clients & social organizations we have achieved the best of all We are the first in the country of its kind to be certified with ISO 9001-2008 in the year 2004 as an outcome of our qualitative management system. We are continuously adapting latest technology of working pattern in office to increase efficiency of the work load so as to meet the actual requirement of our prominent multinational clients which has reached up to hundred in number.
 							<br>
 							<br>
@@ -298,7 +298,7 @@
 			  <div class="ftco-footer-widget">
 				<h2 class="ftco-heading-2 d-flex align-items-center">Connect with us
 			  </h2>
-				<p>
+				 <p style="color: #000;">
 				  You can connect with us in different social medias.
 				</p>
 				<ul class="ftco-footer-social list-unstyled mt-4">
