--- a/license-certificates.html
+++ b/license-certificates.html
@@ -36,192 +36,177 @@
 		<link rel="stylesheet" href="css/alfalah.css" />
 	  </head>
 	  <body>
-		<div class="py-1 top">
-		  <div class="container">
+	<div class="py-1 top">
+		<div class="container">
 			<div class="row">
-			  <div
-				class="col-sm text-center text-md-left mb-md-0 mb-2 pr-md-4 d-flex topper align-items-center"
-			  >
-				<p class="mb-0 w-100">
-				  <span class="fa fa-paper-plane"></span>
-				  <span class="text">admin@alfalahghr.com</span>
-				</p>
-			  </div>
-			  <div class="col-sm justify-content-center d-flex mb-md-0 mb-2">
-				<div class="social-media">
-				  <p class="mb-0 d-flex">
-					<a
-					  href="#"
-					  class="d-flex align-items-center justify-content-center"
-					  ><span class="fa fa-facebook"
-						><i class="sr-only">Facebook</i></span
-					  ></a
-					>
-					<a
-					  href="#"
-					  class="d-flex align-items-center justify-content-center"
-					  ><span class="fa fa-twitter"
-						><i class="sr-only">Twitter</i></span
-					  ></a
-					>
-					<a
-					  href="#"
-					  class="d-flex align-items-center justify-content-center"
-					  ><span class="fa fa-instagram"
-						><i class="sr-only">Instagram</i></span
-					  ></a
-					>
-					<a
-					  href="#"
-					  class="d-flex align-items-center justify-content-center"
-					  ><span class="fa fa-dribbble"
-						><i class="sr-only">Dribbble</i></span
-					  ></a
-					>
-				  </p>
+				<div class="col-sm text-center text-md-left mb-md-0 mb-2 pr-md-4 d-flex topper align-items-center">
+					<p class="mb-0 w-100">
+						<span class="fa fa-paper-plane"></span>
+						<span class="text">youremail@email.com</span>
+					</p>
 				</div>
-			  </div>
-			  <div
-				class="col-sm-12 col-md-6 col-lg-7 d-flex topper align-items-center text-lg-right justify-content-end"
+				<div class="col-sm justify-content-center d-flex mb-md-0 mb-2">
+					<div class="social-media">
+						<p class="mb-0 d-flex">
+							<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"><i class="sr-only">Facebook</i></span></a>
+							<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"><i class="sr-only">Twitter</i></span></a>
+							<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-instagram"><i class="sr-only">Instagram</i></span></a>
+							<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-dribbble"><i class="sr-only">Dribbble</i></span></a>
+						</p>
+					</div>
+				</div>
+				<div class="col-sm-12 col-md-6 col-lg-7 d-flex topper align-items-center text-lg-right justify-content-end">
+					<p class="mb-0 register-link"><a href="#" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">Inquire Now</a></p>
+				</div>
+			</div>
+		</div>
+	</div>
+<!-- Navbar  -->
+<div class="top_header___">
+	<!-- header start -->
+	<header class="header">
+	  <div class="container">
+		<div class="row v-center">
+		  <div class="header-item item-left">
+			<div class="logo">
+			  <a
+				class="navbar-brand d-flex align-items-center"
+				href="index.html"
 			  >
-				<p class="mb-0 register-link">
-				  <a
-					href="#"
-					class="btn btn-primary"
-					data-toggle="modal"
-					data-target="#exampleModalCenter"
-					>Inquire Now</a
-				  >
-				</p>
+				<img
+				  style="height: 5rem"
+				  src="images/official/logo.jpeg"
+				  alt=""
+				/>
+				<span class="ml-2"
+				  >AL Falah <small>Group Human Resources</small></span
+				>
+			  </a>
+			</div>
+		  </div>
+		  <!-- menu start here -->
+		  <div class="header-item item-center">
+			<div class="menu-overlay"></div>
+			<nav class="menu">
+			  <div class="mobile-menu-head">
+				<div class="go-back"><i class="bx bxs-chevron-left"></i></div>
+				<div class="current-menu-title"></div>
+				<div class="mobile-menu-close">&times;</div>
 			  </div>
+			  <ul class="menu-main">
+				<li>
+				  <a href="index.html">Home</a>
+				</li>
+				<li class="menu-item-has-children">
+				  <a href="#">About Us <i class="bx bxs-chevron-down"></i></a>
+				  <div class="sub-menu single-column-menu">
+					<ul>
+					  <li><a href="introduction.html">Indroduction</a></li>
+					  <li><a href="mission-vision.html">Mission & Vision</a></li>
+					  <li><a href="founder.html">Message From Chairman</a></li>
+					  <li><a href="index.html">Our Valued Clients</a></li>
+					  <li><a href="index.html">About Nepal</a></li>
+					</ul>
+				  </div>
+				</li>
+				<li class="menu-item-has-children">
+				  <a href="#"
+					>Our Services <i class="bx bxs-chevron-down"></i
+				  ></a>
+				  <div class="sub-menu single-column-menu">
+					<ul>
+					  <li><a href="index.html">Fair Sourcing</a></li>
+					  <li><a href="index.html">Overseas Recuriment</a></li>
+					  <li><a href="index.html">Resoirces Palcement</a></li>
+					</ul>
+				  </div>
+				</li>
+				<li class="menu-item-has-children">
+				  <a href="#"
+					>Employers/Jobseeker <i class="bx bxs-chevron-down"></i
+				  ></a>
+				  <div class="sub-menu single-column-menu">
+					<ul>
+					  <li><a href="index.html">We Supply</a></li>
+					  <li><a href="index.html">Recuriment Process</a></li>
+					  <li><a href="index.html">Required Documents</a></li>
+					  <li><a href="index.html">Downloads</a></li>
+					</ul>
+				  </div>
+				</li>
+				<li>
+				  <a href="csr.html">CSR</a>
+				</li>
+				<li>
+				  <a href="contact.html">Contact</a>
+				</li>
+			  </ul>
+			</nav>
+		  </div>
+		  <!-- menu end here -->
+		  <div class="header-item item-right">
+			<!-- mobile menu trigger -->
+			<div class="mobile-menu-trigger">
+			  <i class="bx bx-grid-alt"></i>
 			</div>
 		  </div>
 		</div>
-	   
-		<!-- Navbar  -->
-		<div class="top_header___">
-		  <!-- header start -->
-		  <header class="header">
-			<div class="container">
-			  <div class="row v-center">
-				<div class="header-item item-left">
-				  <div class="logo">
-					<a
-					  class="navbar-brand d-flex align-items-center"
-					  href="index.html"
-					>
-					  <img
-						style="height: 5rem"
-						src="images/official/logo.jpeg"
-						alt=""
-					  />
-					  <span class="ml-2"
-						>AL Falah <small>Group Human Resources</small></span
-					  >
-					</a>
-				  </div>
-				</div>
-				<!-- menu start here -->
-				<div class="header-item item-center">
-				  <div class="menu-overlay"></div>
-				  <nav class="menu">
-					<div class="mobile-menu-head">
-					  <div class="go-back"><i class="bx bxs-chevron-left"></i></div>
-					  <div class="current-menu-title"></div>
-					  <div class="mobile-menu-close">&times;</div>
-					</div>
-					<ul class="menu-main">
-					  <li>
-						<a href="index.html">Home</a>
-					  </li>
-					  <li class="menu-item-has-children">
-						<a href="#">About Us <i class="bx bxs-chevron-down"></i></a>
-						<div class="sub-menu single-column-menu">
-						  <ul>
-							<li><a href="introduction.html">Indroduction</a></li>
-							<li><a href="mission-vision.html">Mission & Vision</a></li>
-							<li><a href="founder.html">Message From Chairman</a></li>
-							<li><a href="index.html">Our Valued Clients</a></li>
-							<li><a href="index.html">About Nepal</a></li>
-						  </ul>
-						</div>
-					  </li>
-					  <li class="menu-item-has-children">
-						<a href="#"
-						  >Our Services <i class="bx bxs-chevron-down"></i
-						></a>
-						<div class="sub-menu single-column-menu">
-						  <ul>
-							<li><a href="index.html">Fair Sourcing</a></li>
-							<li><a href="index.html">Overseas Recuriment</a></li>
-							<li><a href="index.html">Resoirces Palcement</a></li>
-						  </ul>
-						</div>
-					  </li>
-					  <li class="menu-item-has-children">
-						<a href="#"
-						  >Employers/Jobseeker <i class="bx bxs-chevron-down"></i
-						></a>
-						<div class="sub-menu single-column-menu">
-						  <ul>
-							<li><a href="index.html">We Supply</a></li>
-							<li><a href="index.html">Recuriment Process</a></li>
-							<li><a href="index.html">Required Documents</a></li>
-							<li><a href="index.html">Downloads</a></li>
-						  </ul>
-						</div>
-					  </li>
-					  <li>
-						<a href="csr.html">CSR</a>
-					  </li>
-					  <li>
-						<a href="contact.html">Contact</a>
-					  </li>
-					</ul>
-				  </nav>
-				</div>
-				<!-- menu end here -->
-				<div class="header-item item-right">
-				  <!-- mobile menu trigger -->
-				  <div class="mobile-menu-trigger">
-					<i class="bx bx-grid-alt"></i>
-				  </div>
-				</div>
-			  </div>
-			</div>
-		  </header>
-		  <!-- header end -->
-		</div>
-		<!-- End Navbar  -->
+	  </div>
+	</header>
+	<!-- header end -->
+</div>
+<!-- End Navbar  -->
 	
-	<section class="hero-wrap hero-wrap-2" style="background-image: url('images/official/ser1.webp');" data-stellar-background-ratio="0.5">
+    <section class="hero-wrap hero-wrap-2" style="background-image: url('images/official/ser1.webp');" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row no-gutters slider-text align-items-end justify-content-start">
 				<div class="col-md-9 ftco-animate pb-5">
-					<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="fa fa-chevron-right"></i></a></span> <span>CSR Policy<i class="fa fa-chevron-right"></i></span></p>
-					<h1 class="mb-3 bread">CSR Policies</h1>
+					<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="fa fa-chevron-right"></i></a></span> <span>License & Certificates                        <i class="fa fa-chevron-right"></i></span></p>
+					<h1 class="mb-3 bread">License & Certificates
+                    </h1>
 				</div>
 			</div>
 		</div>
 	</section>
 
-	<section class="ftco-section contact-section ftco-no-pb" id="contact-section">
+	<section class="ftco-section">
 		<div class="container">
-			<div class="row justify-content-center mb-5 pb-3">
-				<div class="col-md-12 heading-section text-center ftco-animate">
-					<span class="subheading">CSR Policy</span>
-					<h2 class="mb-4">Corporate Social Responsibility (CSR) policy
-                    </h2>
-					<p class="justify-content-start" style="text-align: initial;">
-                        <b>Employees & People –</b> We take seriously our responsibilities to protect, support, and prepare workers for successful careers, and to advocate on their behalf. Our efforts are focused on providing career opportunities and resources to the global workforce, and leading by example in areas such as workplace safety, health and wellness, diversity and inclusion, and training and development. We believe in opportunity for all and are steadfast in our commitment to equal employment opportunity, the protection of human rights, and the prevention of human trafficking.
-                        <br> <br>
-                        <b>Ethics –</b>  AL-Falah Group Human Resources Pvt. Ltd. is committed to doing the right thing, conducting ourselves in a legal, ethical, and trustworthy manner, upholding our regulatory obligations, and complying with both the letter and spirit of our business policies.
-                        <br> <br>
-                        <b>Engagement –</b> AL-Falah Group Human Resources Pvt. Ltd. understands that it takes all of us working together to truly have an impact. As such, we partner with organizations in the communities where we live and work to improve lives and society as a whole – by engaging in activities such as community service, philanthropy, and support for small, minority, women, and disadvantaged businesses. We also seek to engage with workforce suppliers who operate using socially responsible business practices and adhere to the professional code of conduct outlined by the World Employment Confederation.
-                        <br> <br>
-                        <b>Environment –</b> AL-Falah Group Human Resources Pvt. Ltd. recognizes a shared responsibility to protect our planet. Although our facilities and operations have a small ecological footprint, we reduce the environmental impact of our business through preservation, conservation, and waste reduction practices.
-                    </p>
+			<!-- <div class="row justify-content-center mb-5 pb-3">
+				<div class="col-md-7 text-center heading-section ftco-animate">
+					<span class="subheading">Our Global Work Industries</span>
+					<h2 class="mb-4">Latest Projects</h2>
+				</div>
+			</div> -->
+			<div class="row">
+				<div class="col-md-4">
+					<div class="project">
+						<a href="images/official/certificates/1.png" class="img image-popup d-flex align-items-center" style="background-image: url(images/official/certificates/1.png);">
+							<div class="icon d-flex align-items-center justify-content-center mb-5"><span class="fa fa-plus"></span></div>
+						</a>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="project">
+						<a href="images/official/certificates/2.png" class="img image-popup d-flex align-items-center" style="background-image: url(images/official/certificates/2.png);">
+							<div class="icon d-flex align-items-center justify-content-center mb-5"><span class="fa fa-plus"></span></div>
+						</a>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="project">
+						<a href="images/official/certificates/3.png" class="img image-popup d-flex align-items-center" style="background-image: url(images/official/certificates/3.png);">
+							<div class="icon d-flex align-items-center justify-content-center mb-5"><span class="fa fa-plus"></span></div>
+						</a>
+					</div>
+				</div>
+
+				<div class="col-md-4">
+					<div class="project">
+						<a href="images/official/certificates/4.png" class="img image-popup d-flex align-items-center" style="background-image: url(images/official/certificates/4.png);">
+							<div class="icon d-flex align-items-center justify-content-center mb-5"><span class="fa fa-plus"></span></div>
+						</a>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -440,6 +425,7 @@
 				</div>
 			</div>
 		</div>
+		
 
 		<!-- loader -->
 		<div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
@@ -462,6 +448,6 @@
 		
 		<script src="js/main.js"></script>
 		<script src="js/top_navbar.js"></script>
-		
+
 	</body>
 	</html>
