--- a/mission-vision.html
+++ b/mission-vision.html
@@ -216,7 +216,7 @@
                     </span>
 					<h2 class="mb-4">“Practical Solutions Exceptional Service”
                     </h2>
-					<p class="justify-content-start" style="text-align: initial;">
+					<p class="justify-content-start" style="text-align: initial; color: #292323c7;">
                         <br><br>
                        <b>Our Mission</b> 
                         <br>              
@@ -246,7 +246,7 @@
 			  <div class="ftco-footer-widget">
 				<h2 class="ftco-heading-2 d-flex align-items-center">Connect with us
 			  </h2>
-				<p>
+				 <p style="color: #000;">
 				  You can connect with us in different social medias.
 				</p>
 				<ul class="ftco-footer-social list-unstyled mt-4">
