--- a/project.html
+++ b/project.html
@@ -186,7 +186,7 @@
 						<div class="text">
 							<span class="subheading">Building</span>
 							<h3>Building A Condominium</h3>
-							<p><span class="fa fa-map-marker mr-1"></span> San Francisco, California, USA</p>
+							 <p style="color: #000;"><span class="fa fa-map-marker mr-1"></span> San Francisco, California, USA</p>
 						</div>
 					</div>
 				</div>
@@ -198,7 +198,7 @@
 						<div class="text">
 							<span class="subheading">Building</span>
 							<h3>Building A Condominium</h3>
-							<p><span class="fa fa-map-marker mr-1"></span> San Francisco, California, USA</p>
+							 <p style="color: #000;"><span class="fa fa-map-marker mr-1"></span> San Francisco, California, USA</p>
 						</div>
 					</div>
 				</div>
@@ -210,7 +210,7 @@
 						<div class="text">
 							<span class="subheading">Building</span>
 							<h3>Building A Condominium</h3>
-							<p><span class="fa fa-map-marker mr-1"></span> San Francisco, California, USA</p>
+							 <p style="color: #000;"><span class="fa fa-map-marker mr-1"></span> San Francisco, California, USA</p>
 						</div>
 					</div>
 				</div>
@@ -223,7 +223,7 @@
 						<div class="text">
 							<span class="subheading">Building</span>
 							<h3>Building A Condominium</h3>
-							<p><span class="fa fa-map-marker mr-1"></span> San Francisco, California, USA</p>
+							 <p style="color: #000;"><span class="fa fa-map-marker mr-1"></span> San Francisco, California, USA</p>
 						</div>
 					</div>
 				</div>
@@ -235,7 +235,7 @@
 						<div class="text">
 							<span class="subheading">Building</span>
 							<h3>Building A Condominium</h3>
-							<p><span class="fa fa-map-marker mr-1"></span> San Francisco, California, USA</p>
+							 <p style="color: #000;"><span class="fa fa-map-marker mr-1"></span> San Francisco, California, USA</p>
 						</div>
 					</div>
 				</div>
@@ -247,7 +247,7 @@
 						<div class="text">
 							<span class="subheading">Building</span>
 							<h3>Building A Condominium</h3>
-							<p><span class="fa fa-map-marker mr-1"></span> San Francisco, California, USA</p>
+							 <p style="color: #000;"><span class="fa fa-map-marker mr-1"></span> San Francisco, California, USA</p>
 						</div>
 					</div>
 				</div>
@@ -277,7 +277,7 @@
 			  <div class="ftco-footer-widget">
 				<h2 class="ftco-heading-2 d-flex align-items-center">Connect with us
 			  </h2>
-				<p>
+				 <p style="color: #000;">
 				  You can connect with us in different social medias.
 				</p>
 				<ul class="ftco-footer-social list-unstyled mt-4">
