--- a/required-documents.html
+++ b/required-documents.html
@@ -98,109 +98,111 @@
 		  </div>
 		</div>
 	   
-		<!-- Navbar  -->
-		<div class="top_header___">
-		  <!-- header start -->
-		  <header class="header">
-			<div class="container">
-			  <div class="row v-center">
-				<div class="header-item item-left">
-				  <div class="logo">
-					<a
-					  class="navbar-brand d-flex align-items-center"
-					  href="index.html"
-					>
-					  <img
-						style="height: 5rem"
-						src="images/official/logo.jpeg"
-						alt=""
-					  />
-					  <span class="ml-2"
-						>AL Falah <small>Group Human Resources</small></span
-					  >
-					</a>
-				  </div>
-				</div>
-				<!-- menu start here -->
-				<div class="header-item item-center">
-				  <div class="menu-overlay"></div>
-				  <nav class="menu">
-					<div class="mobile-menu-head">
-					  <div class="go-back"><i class="bx bxs-chevron-left"></i></div>
-					  <div class="current-menu-title"></div>
-					  <div class="mobile-menu-close">&times;</div>
-					</div>
-					<ul class="menu-main">
-					  <li>
-						<a href="index.html">Home</a>
-					  </li>
-					  <li class="menu-item-has-children">
-						<a href="#">About Us <i class="bx bxs-chevron-down"></i></a>
-						<div class="sub-menu single-column-menu">
-						  <ul>
-							<li><a href="introduction.html">Indroduction</a></li>
-							<li><a href="mission-vision.html">Mission & Vision</a></li>
-							<li><a href="founder.html">Message From Chairman</a></li>
-							<li><a href="index.html">Our Valued Clients</a></li>
-							<li><a href="index.html">About Nepal</a></li>
-						  </ul>
-						</div>
-					  </li>
-					  <li class="menu-item-has-children">
-						<a href="#"
-						  >Our Services <i class="bx bxs-chevron-down"></i
-						></a>
-						<div class="sub-menu single-column-menu">
-						  <ul>
-							<li><a href="index.html">Fair Sourcing</a></li>
-							<li><a href="index.html">Overseas Recuriment</a></li>
-							<li><a href="index.html">Resoirces Palcement</a></li>
-						  </ul>
-						</div>
-					  </li>
-					  <li class="menu-item-has-children">
-						<a href="#"
-						  >Employers/Jobseeker <i class="bx bxs-chevron-down"></i
-						></a>
-						<div class="sub-menu single-column-menu">
-						  <ul>
-							<li><a href="index.html">We Supply</a></li>
-							<li><a href="index.html">Recuriment Process</a></li>
-							<li><a href="index.html">Required Documents</a></li>
-							<li><a href="index.html">Downloads</a></li>
-						  </ul>
-						</div>
-					  </li>
-					  <li>
-						<a href="csr.html">CSR</a>
-					  </li>
-					  <li>
-						<a href="contact.html">Contact</a>
-					  </li>
-					</ul>
-				  </nav>
-				</div>
-				<!-- menu end here -->
-				<div class="header-item item-right">
-				  <!-- mobile menu trigger -->
-				  <div class="mobile-menu-trigger">
-					<i class="bx bx-grid-alt"></i>
-				  </div>
-				</div>
-			  </div>
+<!-- Navbar  -->
+<div class="top_header___">
+	<!-- header start -->
+	<header class="header">
+	  <div class="container">
+		<div class="row v-center">
+		  <div class="header-item item-left">
+			<div class="logo">
+			  <a
+				class="navbar-brand d-flex align-items-center"
+				href="index.html"
+			  >
+				<img
+				  style="height: 5rem"
+				  src="images/official/logo.jpeg"
+				  alt=""
+				/>
+				<span class="ml-2"
+				  >AL Falah <small>Group Human Resources</small></span
+				>
+			  </a>
 			</div>
-		  </header>
-		  <!-- header end -->
+		  </div>
+		  <!-- menu start here -->
+		  <div class="header-item item-center">
+			<div class="menu-overlay"></div>
+			<nav class="menu">
+			  <div class="mobile-menu-head">
+				<div class="go-back"><i class="bx bxs-chevron-left"></i></div>
+				<div class="current-menu-title"></div>
+				<div class="mobile-menu-close">&times;</div>
+			  </div>
+			  <ul class="menu-main">
+				<li>
+				  <a href="index.html">Home</a>
+				</li>
+				<li class="menu-item-has-children">
+				  <a href="#">About Us <i class="bx bxs-chevron-down"></i></a>
+				  <div class="sub-menu single-column-menu">
+					<ul>
+					  <li><a href="introduction.html">Indroduction</a></li>
+					  <li><a href="mission-vision.html">Mission & Vision</a></li>
+					  <li><a href="founder.html">Message From Chairman</a></li>
+					  <li><a href="index.html">Our Valued Clients</a></li>
+					  <li><a href="index.html">About Nepal</a></li>
+					</ul>
+				  </div>
+				</li>
+				<li class="menu-item-has-children">
+				  <a href="#"
+					>Our Services <i class="bx bxs-chevron-down"></i
+				  ></a>
+				  <div class="sub-menu single-column-menu">
+					<ul>
+					  <li><a href="index.html">Fair Sourcing</a></li>
+					  <li><a href="index.html">Overseas Recuriment</a></li>
+					  <li><a href="index.html">Resoirces Palcement</a></li>
+					</ul>
+				  </div>
+				</li>
+				<li class="menu-item-has-children">
+				  <a href="#"
+					>Employers/Jobseeker <i class="bx bxs-chevron-down"></i
+				  ></a>
+				  <div class="sub-menu single-column-menu">
+					<ul>
+					  <li><a href="index.html">We Supply</a></li>
+					  <li><a href="index.html">Recuriment Process</a></li>
+					  <li><a href="index.html">Required Documents</a></li>
+					  <li><a href="index.html">Downloads</a></li>
+					</ul>
+				  </div>
+				</li>
+				<li>
+				  <a href="csr.html">CSR</a>
+				</li>
+				<li>
+				  <a href="contact.html">Contact</a>
+				</li>
+			  </ul>
+			</nav>
+		  </div>
+		  <!-- menu end here -->
+		  <div class="header-item item-right">
+			<!-- mobile menu trigger -->
+			<div class="mobile-menu-trigger">
+			  <i class="bx bx-grid-alt"></i>
+			</div>
+		  </div>
 		</div>
-		<!-- End Navbar  -->
+	  </div>
+	</header>
+	<!-- header end -->
+</div>
+<!-- End Navbar  -->
 	
 	<section class="hero-wrap hero-wrap-2" style="background-image: url('images/official/ser1.webp');" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row no-gutters slider-text align-items-end justify-content-start">
 				<div class="col-md-9 ftco-animate pb-5">
-					<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="fa fa-chevron-right"></i></a></span> <span>CSR Policy<i class="fa fa-chevron-right"></i></span></p>
-					<h1 class="mb-3 bread">CSR Policies</h1>
+					<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="fa fa-chevron-right"></i></a></span> <span>Required Documents
+                        <i class="fa fa-chevron-right"></i></span></p>
+					<h1 class="mb-3 bread">Required Documents
+                    </h1>
 				</div>
 			</div>
 		</div>
@@ -210,17 +212,26 @@
 		<div class="container">
 			<div class="row justify-content-center mb-5 pb-3">
 				<div class="col-md-12 heading-section text-center ftco-animate">
-					<span class="subheading">CSR Policy</span>
-					<h2 class="mb-4">Corporate Social Responsibility (CSR) policy
+                    <h2 class="mb-4">“Legal Process & Documentation"
                     </h2>
-					<p class="justify-content-start" style="text-align: initial;">
-                        <b>Employees & People –</b> We take seriously our responsibilities to protect, support, and prepare workers for successful careers, and to advocate on their behalf. Our efforts are focused on providing career opportunities and resources to the global workforce, and leading by example in areas such as workplace safety, health and wellness, diversity and inclusion, and training and development. We believe in opportunity for all and are steadfast in our commitment to equal employment opportunity, the protection of human rights, and the prevention of human trafficking.
-                        <br> <br>
-                        <b>Ethics –</b>  AL-Falah Group Human Resources Pvt. Ltd. is committed to doing the right thing, conducting ourselves in a legal, ethical, and trustworthy manner, upholding our regulatory obligations, and complying with both the letter and spirit of our business policies.
-                        <br> <br>
-                        <b>Engagement –</b> AL-Falah Group Human Resources Pvt. Ltd. understands that it takes all of us working together to truly have an impact. As such, we partner with organizations in the communities where we live and work to improve lives and society as a whole – by engaging in activities such as community service, philanthropy, and support for small, minority, women, and disadvantaged businesses. We also seek to engage with workforce suppliers who operate using socially responsible business practices and adhere to the professional code of conduct outlined by the World Employment Confederation.
-                        <br> <br>
-                        <b>Environment –</b> AL-Falah Group Human Resources Pvt. Ltd. recognizes a shared responsibility to protect our planet. Although our facilities and operations have a small ecological footprint, we reduce the environmental impact of our business through preservation, conservation, and waste reduction practices.
+					<p class="justify-content-start" style="text-align: initial; color: #292323c7;">
+                        We have to submit all original documents to the Ministry of Labor Department to get permission to complete recruitment formalities
+                        <br><br>
+                        <ol style="text-align: initial; color: #292323c7;">
+                            <li><b>Demand Letter</b></li>
+                            <li><b>Power of Attorney</b></li>
+                            <li><b>Recruitment Agreement</b></li>
+                            <li><b>Guarantee Letter</b></li>
+                            <li>
+                               <b> Employment Agreement</b>: These above documents S. No. 1,2,3 should be attested from Chamber of Commerce and Nepal Embassy. The guidelines to prepare the above documents are given in the website of Nepal Embassy for the respective countries.
+                                <br> <br>
+                               <h5>BUSINESS CODE AND ETHICS POLICY</h5>
+                               <br>
+                               <b>AL-Falah Group Pvt. Ltd.</b> is a Manpower Supplying Company contributing to fulfill the manpower requirement of our valued clients abroad, precisely in gulf regions and Malaysia. We look forward to obtain business possibility in the remaining parts of the world for our better enhancement.
+                               <br>
+                               Our company continues to uphold the highest level of business ethics and personal integrity in any types of transactions and interactions. Confronted with ethically ambiguous situations each staff member should remember the Company’s commitment to the highest ethical standards and sook advice from supervisors, managers or other appropriate personnel to ensure that all actions they take on behalf of the Company honor this commitment.
+                            </li>
+                        </ol>
                     </p>
 				</div>
 			</div>
