--- a/contact.html
+++ b/contact.html
@@ -212,7 +212,7 @@
 				<div class="col-md-7 heading-section text-center ftco-animate">
 					<span class="subheading">Contact us</span>
 					<h2 class="mb-4">Message us for more details</h2>
-					<p>If you have any questions about our service, please feel free to reach out to us using the contact form below</p>
+					 <p style="color: #000;">If you have any questions about our service, please feel free to reach out to us using the contact form below</p>
 				</div>
 			</div>
 
@@ -257,7 +257,7 @@
 								<span class="fa fa-map-marker"></span>
 							</div>
 							<div class="text">
-								<p><span>Address:</span> Near to International Airport, Sinamangal-9, Kathmandu
+								 <p style="color: #000;"><span>Address:</span> Near to International Airport, Sinamangal-9, Kathmandu
 								</p>
 							</div>
 						</div>
@@ -266,7 +266,7 @@
 								<span class="fa fa-phone"></span>
 							</div>
 							<div class="text">
-								<p><span>Phone:</span> <a href="tel://1234567920">	(+977) 9813965529</a></p>
+								 <p style="color: #000;"><span>Phone:</span> <a href="tel://1234567920">	(+977) 9813965529</a></p>
 							</div>
 						</div>
 						<div class="dbox w-100 d-flex ftco-animate">
@@ -274,7 +274,7 @@
 								<span class="fa fa-paper-plane"></span>
 							</div>
 							<div class="text">
-								<p><span>Admin Email:</span> <a href="mailto:admin@alfalahghr.com">admin@alfalahghr.com</a></p>
+								 <p style="color: #000;"><span>Admin Email:</span> <a href="mailto:admin@alfalahghr.com">admin@alfalahghr.com</a></p>
 							</div>
 						</div>
 						<div class="dbox w-100 d-flex ftco-animate">
@@ -282,7 +282,7 @@
 								<span class="fa fa-paper-plane"></span>
 							</div>
 							<div class="text">
-								<p><span>Info Email:</span> <a href="mailto:info@alfalahghr.com">info@alfalahghr.com</a></p>
+								 <p style="color: #000;"><span>Info Email:</span> <a href="mailto:info@alfalahghr.com">info@alfalahghr.com</a></p>
 							</div>
 						</div>
 					</div>
@@ -309,7 +309,7 @@
 			  <div class="ftco-footer-widget">
 				<h2 class="ftco-heading-2 d-flex align-items-center">Connect with us
 			  </h2>
-				<p>
+				 <p style="color: #000;">
 				  You can connect with us in different social medias.
 				</p>
 				<ul class="ftco-footer-social list-unstyled mt-4">
