--- a/services.html
+++ b/services.html
@@ -184,7 +184,7 @@
      <div class="text">
       <div class="icon"><span class="flaticon-architect"></span></div>
       <h2>Architecture</h2>
-      <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+       <p style="color: #000;">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
       <a href="#" class="btn-custom">Read more</a>
     </div>
   </div>
@@ -195,7 +195,7 @@
    <div class="text">
     <div class="icon"><span class="flaticon-worker"></span></div>
     <h2>Renovation</h2>
-    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+     <p style="color: #000;">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
     <a href="#" class="btn-custom">Read more</a>
   </div>
 </div>
@@ -206,7 +206,7 @@
    <div class="text">
     <div class="icon"><span class="flaticon-hammer"></span></div>
     <h2>Construction</h2>
-    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+     <p style="color: #000;">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
     <a href="#" class="btn-custom">Read more</a>
   </div>
 </div>
@@ -218,7 +218,7 @@
    <div class="text">
     <div class="icon"><span class="flaticon-architect"></span></div>
     <h2>Interior &amp; Exterior</h2>
-    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+     <p style="color: #000;">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
     <a href="#" class="btn-custom">Read more</a>
   </div>
 </div>
@@ -229,7 +229,7 @@
    <div class="text">
     <div class="icon"><span class="flaticon-worker"></span></div>
     <h2>Chemical Research</h2>
-    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+     <p style="color: #000;">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
     <a href="#" class="btn-custom">Read more</a>
   </div>
 </div>
@@ -240,7 +240,7 @@
    <div class="text">
     <div class="icon"><span class="flaticon-hammer"></span></div>
     <h2>Petroleum &amp; Gas</h2>
-    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+     <p style="color: #000;">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
     <a href="#" class="btn-custom">Read more</a>
   </div>
 </div>
@@ -256,7 +256,7 @@
       <div class="ftco-footer-widget">
       <h2 class="ftco-heading-2 d-flex align-items-center">Connect with us
       </h2>
-      <p>
+       <p style="color: #000;">
         You can connect with us in different social medias.
       </p>
       <ul class="ftco-footer-social list-unstyled mt-4">
