--- a/we-supply.html
+++ b/we-supply.html
@@ -251,7 +251,7 @@
 			  <div class="ftco-footer-widget">
 				<h2 class="ftco-heading-2 d-flex align-items-center">Connect with us
 			  </h2>
-				<p>
+				 <p style="color: #000;">
 				  You can connect with us in different social medias.
 				</p>
 				<ul class="ftco-footer-social list-unstyled mt-4">
